# claude-sessions

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  plugin_idea.md
.github/workflows/: ci.yml
claude_sessions/: __init__.py  api.py  cli.py  core.py  ui.py
claude_sessions/commands/: find.py  info.py  ls.py  pick.py  resume.py  rm.py
examples/plugins/claude-sessions-export/: README.md  pyproject.toml
examples/plugins/claude-sessions-export/claude_sessions_export/: __init__.py
tests/: conftest.py  test_commands_find.py  test_commands_ls.py  test_commands_pick.py  test_commands_resume.py  test_commands_rm.py  test_core.py  test_plugins.py
