[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-sessions"
version = "0.2.0"
description = "List, pick, resume, and manage Claude Code sessions across projects."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Hitesh Mandloi" }]
keywords = ["claude", "claude-code", "cli", "sessions", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
claude-sessions = "claude_sessions.cli:main"

[project.entry-points."claude_sessions.commands"]
# Built-in commands are registered in code, not via entry_points.
# Plugins register here, e.g.:
#   export = "claude_sessions_export:ExportCommand"

[project.urls]
Homepage = "https://github.com/hitesh-mandloi/claude-sessions"
Issues = "https://github.com/hitesh-mandloi/claude-sessions/issues"
Source = "https://github.com/hitesh-mandloi/claude-sessions"

[tool.hatch.build.targets.wheel]
packages = ["claude_sessions"]

[tool.hatch.build.targets.sdist]
include = ["claude_sessions", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
